# cloudctl-skill

./: .cloudctl.example.yaml  .cloudctl.yaml.azure-local  .gitignore  AZURE_INTEGRATION_SUMMARY.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  INSTALLATION.md  Makefile  PUBLICATION_READY.md  README.md  ROOT_CAUSE_ANALYSIS.md  SECURITY.md  SKILL_ALIGNMENT_SUMMARY.md  SKILL_MANIFEST.json  TROUBLESHOOTING.md  pyproject.toml  pytest.ini  requirements.txt  simple_test.sh  skill.md  test_multicloud.sh  test_results.txt  test_results.xml
.claude/: CLAUDE.md  SKILL.md  cloudctl.md
.github/workflows/: publish-packages.yml  release.yml  tests.yml
config/: cloudctl.default.json  schema.json
docs/: API.md  ARCHITECTURE.md  CLOUDCTLSKILL_DOCUMENTATION.md  COMMANDS.md  CONFIG.md  CONFIGURATION.md  SECURITY_CHECKLIST.md  SECURITY_SETUP.md  TROUBLESHOOTING.md
examples/: basic_usage.py  error_handling.py  multi_cloud_switching.py  safe_configuration.py
scripts/: pre-commit-secrets
src/cloudctl_skill/: __init__.py  config.py  guardrails.py  mcp.py  models.py  oci_handler.py  skill.py  utils.py
tests/: test_cloudctl_skill.py  test_config.py  test_guardrails.py  test_mcp_error_paths.py  test_mcp_server.py  test_oci_handler.py  test_security.py  test_skill.py  test_skill_edge_cases.py  test_utils.py
